# cpp-starter

./: .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.txt
scripts/: configure.sh  run.sh
src/: main.cpp
